--- a/.github/workflows/SSR.yml
+++ b/.github/workflows/SSR.yml
@@ -26,4 +26,16 @@ jobs:
       env:
         API: ${{ secrets.API }} 
         TOKEN: ${{ secrets.TOKEN }}   
+
+    - name: Commit files
+      run: 
+        git add ./
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git commit -m "Add changes" -a
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.TOKEN }}
+        branch: 'master'
     
