--- a/.github/workflows/SSR.yml
+++ b/.github/workflows/SSR.yml
@@ -21,15 +21,14 @@ jobs:
       run: 
         npm install axios jsdom 
         
-    - name: Run
+    - name: Run Create local changes
       run: node index.js
       env:
         API: ${{ secrets.API }} 
         TOKEN: ${{ secrets.TOKEN }}   
 
     - name: Commit files
-      run: 
-        git add ./
+      run: |
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config user.name "github-actions[bot]"
         git commit -m "Add changes" -a
