--- a/.github/workflows/SSR.yml
+++ b/.github/workflows/SSR.yml
@@ -28,6 +28,7 @@ jobs:
 
     - name: Commit files
       run: |
+        git add ./
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config user.name "github-actions[bot]"
         git commit -m "Add changes" -a
